[gd_scene load_steps=12 format=4 uid="uid://vl5wfl5rhn74"]

[ext_resource type="Script" uid="uid://cj7a5pne621mp" path="res://scenes/main/main.gd" id="1_k2fmo"]
[ext_resource type="Texture2D" uid="uid://bpdsnvi6dpoiy" path="res://assets/images/ui/health_bar/under.png" id="2_b1x3f"]
[ext_resource type="TileSet" uid="uid://bc3uo5qa7lw44" path="res://tile_set.tres" id="2_l3cfh"]
[ext_resource type="PackedScene" uid="uid://8gttw0lpncif" path="res://scenes/player/player.tscn" id="3_6q06x"]
[ext_resource type="Texture2D" uid="uid://cpjaxbcln8btb" path="res://assets/images/ui/health_bar/over.png" id="3_a8run"]
[ext_resource type="Texture2D" uid="uid://hsjfde7n5dum" path="res://assets/images/ui/health_bar/progress.png" id="4_ouso4"]
[ext_resource type="PackedScene" uid="uid://di1b7n04bjbdj" path="res://scenes/trap/trap.tscn" id="5_6q06x"]
[ext_resource type="PackedScene" uid="uid://btbichyb6l0kp" path="res://scenes/platform/platform.tscn" id="6_ow5a4"]
[ext_resource type="PackedScene" uid="uid://dl06ary1i5chc" path="res://scenes/enemies/slime_enemy/slime_enemy.tscn" id="7_ouso4"]
[ext_resource type="PackedScene" uid="uid://by63wd86btsmr" path="res://scenes/destructables/vase_destructable/vase_destructable.tscn" id="10_ouso4"]
[ext_resource type="PackedScene" uid="uid://bo6p435vvnwi0" path="res://scenes/collectables/health_collectable/health_collectable.tscn" id="11_ouso4"]

[node name="main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_k2fmo")

[node name="camera" type="Camera2D" parent="."]
position = Vector2(161, 92)
position_smoothing_enabled = true

[node name="canvas" type="CanvasLayer" parent="."]

[node name="health_bar" type="TextureProgressBar" parent="canvas"]
offset_left = 16.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 56.0
scale = Vector2(4, 4)
value = 100.0
texture_under = ExtResource("2_b1x3f")
texture_over = ExtResource("3_a8run")
texture_progress = ExtResource("4_ouso4")
texture_progress_offset = Vector2(18, 0)

[node name="tile_maps" type="Node2D" parent="."]

[node name="floor_tile_map" type="TileMapLayer" parent="tile_maps"]
tile_map_data = PackedByteArray("AAATAAsAAgABAAEAAAATAAoAAgABAAEAAAATAAkAAgABAAEAAAATAAgAAgABAAEAAAATAAcAAgABAAEAAAATAAYAAgABAAEAAAATAAUAAgABAAEAAAATAAQAAgABAAEAAAATAAMAAgABAAEAAAATAAIAAgABAAEAAAATAAEAAgABAAEAAAASAAsAAgABAAEAAAASAAoAAgABAAEAAAASAAkAAgABAAEAAAASAAgAAgABAAEAAAASAAcAAgABAAEAAAASAAYAAgABAAEAAAASAAUAAgABAAEAAAASAAQAAgABAAEAAAASAAMAAgABAAEAAAASAAIAAgABAAEAAAASAAEAAgABAAEAAAARAAsAAgABAAEAAAARAAoAAgABAAEAAAARAAkAAgABAAEAAAARAAgAAgABAAEAAAARAAcAAgABAAEAAAARAAYAAgABAAEAAAARAAUAAgABAAEAAAARAAQAAgABAAEAAAARAAMAAgABAAEAAAARAAIAAgABAAEAAAARAAEAAgABAAEAAAAQAAsAAgABAAEAAAAQAAoAAgABAAEAAAAQAAkAAgABAAEAAAAQAAgAAgABAAEAAAAQAAcAAgABAAEAAAAQAAYAAgABAAEAAAAQAAUAAgABAAEAAAAQAAQAAgABAAEAAAAQAAMAAgABAAEAAAAQAAIAAgABAAEAAAAQAAEAAgABAAEAAAAPAAsAAgABAAEAAAAPAAoAAgABAAEAAAAPAAkAAgABAAEAAAAPAAgAAgABAAEAAAAPAAcAAgABAAEAAAAPAAYAAgABAAEAAAAPAAUAAgABAAEAAAAPAAQAAgABAAEAAAAPAAMAAgABAAEAAAAPAAIAAgABAAEAAAAPAAEAAgABAAEAAAAOAAsAAgABAAEAAAAOAAoAAgABAAEAAAAOAAkAAgABAAEAAAAOAAgAAgABAAEAAAAOAAcAAgABAAEAAAAOAAYAAgABAAEAAAAOAAUAAgABAAEAAAAOAAQAAgABAAEAAAAOAAMAAgABAAEAAAAOAAIAAgABAAEAAAAOAAEAAgABAAEAAAANAAsAAgABAAEAAAANAAoAAgABAAEAAAANAAkAAgABAAEAAAANAAgAAgABAAEAAAANAAcAAgABAAEAAAANAAYAAgABAAEAAAANAAUAAgABAAEAAAANAAQAAgABAAEAAAANAAMAAgABAAEAAAANAAIAAgABAAEAAAANAAEAAgABAAEAAAAMAAsAAgABAAEAAAAMAAoAAgABAAEAAAAMAAkAAgABAAEAAAAMAAgAAgABAAEAAAAMAAcAAgABAAEAAAAMAAYAAgABAAEAAAAMAAUAAgABAAEAAAAMAAQAAgABAAEAAAAMAAMAAgABAAEAAAAMAAIAAgABAAEAAAAMAAEAAgABAAEAAAALAAsAAgABAAEAAAALAAoAAgABAAEAAAALAAkAAgABAAEAAAALAAgAAgABAAEAAAALAAcAAgABAAEAAAALAAYAAgABAAEAAAALAAUAAgABAAEAAAALAAQAAgABAAEAAAALAAMAAgABAAEAAAALAAIAAgABAAEAAAALAAEAAgABAAEAAAAKAAsAAgABAAEAAAAKAAoAAgABAAEAAAAKAAkAAgABAAEAAAAKAAgAAgABAAEAAAAKAAcAAgABAAEAAAAKAAYAAgABAAEAAAAKAAUAAgABAAEAAAAKAAQAAgABAAEAAAAKAAMAAgABAAEAAAAKAAIAAgABAAEAAAAKAAEAAgABAAEAAAAJAAsAAgABAAEAAAAJAAoAAgABAAEAAAAJAAkAAgABAAEAAAAJAAgAAgABAAEAAAAJAAcAAgABAAEAAAAJAAYAAgABAAEAAAAJAAUAAgABAAEAAAAJAAQAAgABAAEAAAAJAAMAAgABAAEAAAAJAAIAAgABAAEAAAAJAAEAAgABAAEAAAAIAAsAAgABAAEAAAAIAAoAAgABAAEAAAAIAAkAAgABAAEAAAAIAAgAAgABAAEAAAAIAAcAAgABAAEAAAAIAAYAAgABAAEAAAAIAAUAAgABAAEAAAAIAAQAAgABAAEAAAAIAAMAAgABAAEAAAAIAAIAAgABAAEAAAAIAAEAAgABAAEAAAAHAAsAAgABAAEAAAAHAAgAAgABAAEAAAAHAAcAAgABAAEAAAAHAAYAAgABAAEAAAAHAAUAAgABAAEAAAAHAAQAAgABAAEAAAAHAAMAAgABAAEAAAAHAAIAAgABAAEAAAAHAAEAAgABAAEAAAAGAAsAAgABAAEAAAAGAAgAAgABAAEAAAAGAAcAAgABAAEAAAAGAAYAAgABAAEAAAAGAAUAAgABAAEAAAAGAAQAAgABAAEAAAAGAAMAAgABAAEAAAAGAAIAAgABAAEAAAAGAAEAAgABAAEAAAAFAAsAAgABAAEAAAAFAAgAAgABAAEAAAAFAAcAAgABAAEAAAAFAAYAAgABAAEAAAAFAAUAAgABAAEAAAAFAAQAAgABAAEAAAAFAAMAAgABAAEAAAAFAAIAAgABAAEAAAAFAAEAAgABAAEAAAAEAAsAAgABAAEAAAAEAAoAAgABAAEAAAAEAAkAAgABAAEAAAAEAAgAAgABAAEAAAAEAAcAAgABAAEAAAAEAAYAAgABAAEAAAAEAAUAAgABAAEAAAAEAAQAAgABAAEAAAAEAAMAAgABAAEAAAAEAAIAAgABAAEAAAAEAAEAAgABAAEAAAADAAsAAgABAAEAAAADAAoAAgABAAEAAAADAAkAAgABAAEAAAADAAgAAgABAAEAAAADAAcAAgABAAEAAAADAAYAAgABAAEAAAADAAUAAgABAAEAAAADAAQAAgABAAEAAAADAAMAAgABAAEAAAADAAIAAgABAAEAAAADAAEAAgABAAEAAAACAAsAAgABAAEAAAACAAoAAgABAAEAAAACAAkAAgABAAEAAAACAAgAAgABAAEAAAACAAcAAgABAAEAAAACAAYAAgABAAEAAAACAAUAAgABAAEAAAACAAQAAgABAAEAAAACAAMAAgABAAEAAAACAAIAAgABAAEAAAACAAEAAgABAAEAAAABAAsAAgABAAEAAAABAAoAAgABAAEAAAABAAkAAgABAAEAAAABAAgAAgABAAEAAAABAAcAAgABAAEAAAABAAYAAgABAAEAAAABAAUAAgABAAEAAAABAAQAAgABAAEAAAABAAMAAgABAAEAAAABAAIAAgABAAEAAAABAAEAAgABAAEAAAAAAAIAAgAAAAEAAAAAAAEAAgAAAAEAAAAAAAAAAgAAAAAAAAABAAAAAgABAAAAAAACAAAAAgABAAAAAAAAAAMAAgAAAAEAAAAAAAQAAgAAAAEAAAAAAAUAAgAAAAEAAAAAAAYAAgAAAAEAAAAAAAcAAgAAAAEAAAAAAAgAAgAAAAEAAAAAAAkAAgAAAAEAAAAAAAoAAgAAAAEAAAAAAAsAAgAAAAEAAAACAAwAAgABAAIAAAABAAwAAgABAAIAAAAAAAwAAgAAAAIAAAADAAAAAgABAAAAAAADAAwAAgABAAIAAAAEAAAAAgABAAAAAAAEAAwAAgABAAIAAAAFAAAAAgABAAAAAAAFAAwAAgABAAIAAAAGAAAAAgABAAAAAAAGAAwAAgABAAIAAAAHAAAAAgABAAAAAAAHAAwAAgABAAIAAAAIAAAAAgABAAAAAAAIAAwAAgABAAIAAAAJAAAAAgABAAAAAAAJAAwAAgABAAIAAAAKAAAAAgABAAAAAAAKAAwAAgABAAIAAAALAAAAAgABAAAAAAALAAwAAgABAAIAAAAMAAAAAgABAAAAAAAMAAwAAgABAAIAAAANAAAAAgABAAAAAAANAAwAAgABAAIAAAAOAAAAAgABAAAAAAAOAAwAAgABAAIAAAAPAAAAAgABAAAAAAAPAAwAAgABAAIAAAAQAAAAAgABAAAAAAAQAAwAAgABAAIAAAARAAAAAgABAAAAAAARAAwAAgABAAIAAAASAAAAAgABAAAAAAASAAwAAgABAAIAAAATAAAAAgABAAAAAAATAAwAAgABAAIAAAAUAAEAAgACAAEAAAAUAAIAAgACAAEAAAAUAAAAAgACAAAAAAAUAAMAAgACAAEAAAAUAAQAAgACAAEAAAAUAAUAAgADAAIAAAAUAAYAAgABAAEAAAAUAAcAAgADAAEAAAAUAAgAAgACAAEAAAAUAAkAAgACAAEAAAAUAAoAAgACAAEAAAAUAAsAAgACAAEAAAAUAAwAAgACAAIAAAAZAAYAAgABAAEAAAAYAAYAAgABAAEAAAAXAAYAAgABAAEAAAAWAAYAAgABAAEAAAAVAAYAAgABAAEAAAAVAAcAAgABAAIAAAAVAAUAAgABAAAAAAAWAAcAAgABAAIAAAAWAAUAAgABAAAAAAAXAAcAAgABAAIAAAAXAAUAAgABAAAAAAAYAAcAAgABAAIAAAAYAAUAAgABAAAAAAAZAAcAAgABAAIAAAAZAAUAAgABAAAAAAAaAAYAAgACAAEAAAAaAAcAAgACAAIAAAAaAAUAAgACAAAAAAAHAAkAAgABAAEAAAAHAAoAAgABAAEAAAAFAAkAAgABAAEAAAAGAAkAAgABAAEAAAAGAAoAAgABAAEAAAAFAAoAAgABAAEAAAA=")
tile_set = ExtResource("2_l3cfh")

[node name="water_tile_map" type="TileMapLayer" parent="tile_maps"]
tile_map_data = PackedByteArray("AAAFAAoABQABAAEAAAAEAAoABQABAAEAAAAFAAsABQABAAIAAAAEAAsABQABAAIAAAADAAsABQABAAIAAAADAAoABQABAAEAAAADAAkABQABAAEAAAAEAAkABQADAAIAAAAFAAkABQABAAAAAAAGAAoABQACAAEAAAAGAAsABQACAAIAAAAGAAkABQACAAAAAAADAAgABQABAAEAAAAEAAgABQACAAEAAAACAAkABQAAAAEAAAACAAgABQAAAAEAAAACAAcABQAAAAAAAAADAAcABQABAAAAAAAEAAcABQACAAAAAAACAAoABQAAAAEAAAACAAsABQAAAAIAAAA=")
tile_set = ExtResource("2_l3cfh")

[node name="walls_tile_map" type="TileMapLayer" parent="tile_maps"]
tile_map_data = PackedByteArray("AAATAAwAAwABAAEAAAATAAsAAwABAAEAAAATAAoAAwABAAEAAAATAAkAAwABAAEAAAATAAgAAwABAAEAAAATAAcAAwABAAEAAAATAAYAAwABAAEAAAATAAUAAwABAAEAAAATAAQAAwABAAEAAAATAAMAAwABAAEAAAATAAIAAwABAAEAAAATAAEAAwABAAEAAAATAAAAAwABAAEAAAASAAwAAwABAAEAAAASAAsAAwABAAEAAAASAAoAAwABAAEAAAASAAkAAwABAAEAAAASAAgAAwABAAEAAAASAAcAAwABAAEAAAASAAYAAwABAAEAAAASAAUAAwABAAEAAAASAAQAAwABAAEAAAASAAMAAwABAAEAAAASAAIAAwABAAEAAAASAAEAAwABAAEAAAASAAAAAwABAAEAAAARAAwAAwABAAEAAAARAAsAAwABAAEAAAARAAoAAwABAAEAAAARAAkAAwABAAEAAAARAAgAAwABAAEAAAARAAcAAwABAAEAAAARAAYAAwABAAEAAAARAAUAAwABAAEAAAARAAQAAwABAAEAAAARAAMAAwABAAEAAAARAAIAAwABAAEAAAARAAEAAwABAAEAAAARAAAAAwABAAEAAAAQAAwAAwABAAEAAAAQAAsAAwABAAEAAAAQAAoAAwABAAEAAAAQAAkAAwABAAEAAAAQAAgAAwABAAEAAAAQAAcAAwABAAEAAAAQAAYAAwABAAEAAAAQAAUAAwABAAEAAAAQAAQAAwABAAEAAAAQAAMAAwABAAEAAAAQAAIAAwABAAEAAAAQAAEAAwABAAEAAAAQAAAAAwABAAEAAAAPAAwAAwABAAEAAAAPAAsAAwABAAEAAAAPAAoAAwABAAEAAAAPAAkAAwABAAEAAAAPAAgAAwABAAEAAAAPAAcAAwABAAEAAAAPAAYAAwABAAEAAAAPAAUAAwABAAEAAAAPAAQAAwABAAEAAAAPAAMAAwABAAEAAAAPAAIAAwABAAEAAAAPAAEAAwABAAEAAAAPAAAAAwABAAEAAAAOAAwAAwABAAEAAAAOAAsAAwABAAEAAAAOAAoAAwABAAEAAAAOAAkAAwABAAEAAAAOAAgAAwABAAEAAAAOAAcAAwABAAEAAAAOAAYAAwABAAEAAAAOAAUAAwABAAEAAAAOAAQAAwABAAEAAAAOAAMAAwABAAEAAAAOAAIAAwABAAEAAAAOAAEAAwABAAEAAAAOAAAAAwABAAEAAAANAAwAAwABAAEAAAANAAsAAwABAAEAAAANAAoAAwABAAEAAAANAAkAAwABAAEAAAANAAgAAwABAAEAAAANAAcAAwABAAEAAAANAAYAAwABAAEAAAANAAUAAwABAAEAAAANAAQAAwABAAEAAAANAAMAAwABAAEAAAANAAIAAwABAAEAAAANAAEAAwABAAEAAAANAAAAAwABAAEAAAAMAAwAAwABAAEAAAAMAAsAAwABAAEAAAAMAAoAAwABAAEAAAAMAAkAAwABAAEAAAAMAAgAAwABAAEAAAAMAAcAAwABAAEAAAAMAAYAAwABAAEAAAAMAAUAAwABAAEAAAAMAAQAAwABAAEAAAAMAAMAAwABAAEAAAAMAAIAAwABAAEAAAAMAAEAAwABAAEAAAAMAAAAAwABAAEAAAALAAwAAwABAAEAAAALAAsAAwABAAEAAAALAAoAAwABAAEAAAALAAkAAwABAAEAAAALAAgAAwABAAEAAAALAAcAAwABAAEAAAALAAYAAwABAAEAAAALAAUAAwABAAEAAAALAAQAAwABAAEAAAALAAMAAwABAAEAAAALAAIAAwABAAEAAAALAAEAAwABAAEAAAALAAAAAwABAAEAAAAKAAwAAwABAAEAAAAKAAsAAwABAAEAAAAKAAoAAwABAAEAAAAKAAkAAwABAAEAAAAKAAgAAwABAAEAAAAKAAcAAwABAAEAAAAKAAYAAwABAAEAAAAKAAUAAwABAAEAAAAKAAQAAwABAAEAAAAKAAMAAwABAAEAAAAKAAIAAwABAAEAAAAKAAEAAwABAAEAAAAKAAAAAwABAAEAAAAJAAwAAwABAAEAAAAJAAsAAwABAAEAAAAJAAoAAwABAAEAAAAJAAkAAwABAAEAAAAJAAgAAwABAAEAAAAJAAcAAwABAAEAAAAJAAYAAwABAAEAAAAJAAUAAwABAAEAAAAJAAQAAwABAAEAAAAJAAMAAwABAAEAAAAJAAIAAwABAAEAAAAJAAEAAwABAAEAAAAJAAAAAwABAAEAAAAIAAwAAwABAAEAAAAIAAsAAwABAAEAAAAIAAoAAwABAAEAAAAIAAkAAwABAAEAAAAIAAgAAwABAAEAAAAIAAcAAwABAAEAAAAIAAYAAwABAAEAAAAIAAUAAwABAAEAAAAIAAQAAwABAAEAAAAIAAMAAwABAAEAAAAIAAIAAwABAAEAAAAIAAEAAwABAAEAAAAIAAAAAwABAAEAAAAHAAwAAwABAAEAAAAHAAsAAwABAAEAAAAHAAoAAwABAAEAAAAHAAkAAwABAAEAAAAHAAgAAwABAAEAAAAHAAcAAwABAAEAAAAHAAYAAwABAAEAAAAHAAUAAwABAAEAAAAHAAQAAwABAAEAAAAHAAMAAwABAAEAAAAHAAIAAwABAAEAAAAHAAEAAwABAAEAAAAHAAAAAwABAAEAAAAGAAwAAwABAAEAAAAGAAsAAwABAAEAAAAGAAkAAwABAAEAAAAGAAgAAwABAAEAAAAGAAcAAwABAAEAAAAGAAYAAwABAAEAAAAGAAUAAwABAAEAAAAGAAQAAwABAAEAAAAGAAMAAwABAAEAAAAGAAIAAwABAAEAAAAGAAEAAwABAAEAAAAGAAAAAwABAAEAAAAFAAwAAwABAAEAAAAFAAsAAwABAAEAAAAFAAkAAwABAAEAAAAFAAgAAwABAAEAAAAFAAcAAwABAAEAAAAFAAYAAwABAAEAAAAFAAUAAwABAAEAAAAFAAQAAwABAAEAAAAFAAMAAwABAAEAAAAFAAIAAwABAAEAAAAFAAEAAwABAAEAAAAFAAAAAwABAAEAAAAEAAwAAwABAAEAAAAEAAsAAwABAAEAAAAEAAYAAwABAAEAAAAEAAUAAwABAAEAAAAEAAQAAwABAAEAAAAEAAMAAwABAAEAAAAEAAIAAwABAAEAAAAEAAEAAwABAAEAAAAEAAAAAwABAAEAAAADAAwAAwABAAEAAAADAAYAAwABAAEAAAADAAUAAwABAAEAAAADAAQAAwABAAEAAAADAAMAAwABAAEAAAADAAIAAwABAAEAAAADAAEAAwABAAEAAAADAAAAAwABAAEAAAACAAwAAwABAAEAAAACAAYAAwABAAEAAAACAAUAAwABAAEAAAACAAQAAwABAAEAAAACAAMAAwABAAEAAAACAAIAAwABAAEAAAACAAEAAwABAAEAAAACAAAAAwABAAEAAAABAAwAAwABAAEAAAABAAYAAwABAAEAAAABAAUAAwABAAEAAAABAAQAAwABAAEAAAABAAMAAwABAAEAAAABAAIAAwABAAEAAAABAAEAAwABAAEAAAABAAAAAwABAAEAAAAAAAEAAwAAAAEAAAAAAAAAAwAAAAEAAAAAAP//AwAAAAAAAAABAP//AwABAAAAAAACAP//AwABAAAAAAAAAAIAAwAAAAEAAAAAAAMAAwAAAAEAAAAAAAQAAwAAAAEAAAAAAAUAAwAAAAEAAAAAAAYAAwAAAAEAAAAAAAwAAwAAAAEAAAACAA0AAwABAAIAAAABAA0AAwABAAIAAAAAAA0AAwAAAAIAAAADAP//AwABAAAAAAADAA0AAwABAAIAAAAEAP//AwABAAAAAAAEAA0AAwABAAIAAAAFAP//AwABAAAAAAAFAA0AAwABAAIAAAAGAP//AwABAAAAAAAGAA0AAwABAAIAAAAHAP//AwABAAAAAAAHAA0AAwABAAIAAAAIAP//AwABAAAAAAAIAA0AAwABAAIAAAAJAP//AwABAAAAAAAJAA0AAwABAAIAAAAKAP//AwABAAAAAAAKAA0AAwABAAIAAAALAP//AwABAAAAAAALAA0AAwABAAIAAAAMAP//AwABAAAAAAAMAA0AAwABAAIAAAANAP//AwABAAAAAAANAA0AAwABAAIAAAAOAP//AwABAAAAAAAOAA0AAwABAAIAAAAPAP//AwABAAAAAAAPAA0AAwABAAIAAAAQAP//AwABAAAAAAAQAA0AAwABAAIAAAARAP//AwABAAAAAAARAA0AAwABAAIAAAASAP//AwABAAAAAAASAA0AAwABAAIAAAATAP//AwABAAAAAAATAA0AAwABAAIAAAAUAAAAAwACAAEAAAAUAAEAAwACAAEAAAAUAP//AwACAAAAAAAUAAIAAwACAAEAAAAUAAMAAwACAAEAAAAUAAQAAwADAAIAAAAUAAUAAwABAAEAAAAUAAYAAwABAAEAAAAUAAcAAwABAAEAAAAUAAgAAwADAAEAAAAUAAkAAwACAAEAAAAUAAwAAwACAAEAAAAUAA0AAwACAAIAAAAZAAcAAwABAAEAAAAZAAYAAwABAAEAAAAZAAUAAwABAAEAAAAYAAcAAwABAAEAAAAYAAYAAwABAAEAAAAYAAUAAwABAAEAAAAXAAcAAwABAAEAAAAXAAYAAwABAAEAAAAXAAUAAwABAAEAAAAWAAcAAwABAAEAAAAWAAYAAwABAAEAAAAWAAUAAwABAAEAAAAVAAcAAwABAAEAAAAVAAYAAwABAAEAAAAVAAUAAwABAAEAAAAVAAQAAwABAAAAAAAWAAQAAwABAAAAAAAWAAgAAwABAAIAAAAVAAgAAwABAAIAAAAXAAQAAwABAAAAAAAXAAgAAwABAAIAAAAYAAQAAwABAAAAAAAYAAgAAwABAAIAAAAZAAQAAwABAAAAAAAZAAgAAwABAAIAAAAaAAUAAwACAAEAAAAaAAYAAwACAAEAAAAaAAQAAwACAAAAAAAaAAcAAwACAAEAAAAaAAgAAwACAAIAAAADAAsAAwABAAEAAAACAAsAAwABAAEAAAABAAsAAwABAAEAAAAUAAsAAwACAAEAAAAUAAoAAwACAAEAAAAEAAoAAwABAAEAAAAEAAkAAwABAAEAAAAEAAgAAwABAAEAAAAEAAcAAwABAAEAAAADAAgAAwABAAEAAAADAAcAAwABAAEAAAACAAgAAwABAAEAAAACAAcAAwABAAEAAAABAAoAAwABAAIAAAABAAkAAwABAAEAAAABAAgAAwABAAAAAAABAAcAAwABAAEAAAAAAAsAAwAAAAEAAAAAAAoAAwAAAAIAAAAAAAkAAwAAAAEAAAAAAAcAAwAAAAEAAAAAAAgAAwAAAAAAAAA=")
tile_set = ExtResource("2_l3cfh")

[node name="player" parent="." instance=ExtResource("3_6q06x")]
position = Vector2(24, 120)

[node name="enemies" type="Node2D" parent="."]
y_sort_enabled = true

[node name="slime_enemy_1" parent="enemies" instance=ExtResource("7_ouso4")]
position = Vector2(24, 152)

[node name="traps" type="Node2D" parent="."]

[node name="trap_1" parent="traps" instance=ExtResource("5_6q06x")]
position = Vector2(128, 120)

[node name="trap_2" parent="traps" instance=ExtResource("5_6q06x")]
position = Vector2(128, 88)

[node name="trap_3" parent="traps" instance=ExtResource("5_6q06x")]
position = Vector2(112, 88)

[node name="trap_4" parent="traps" instance=ExtResource("5_6q06x")]
position = Vector2(112, 120)

[node name="platforms" type="Node2D" parent="."]

[node name="platform_1" parent="platforms" instance=ExtResource("6_ow5a4")]
position = Vector2(96, 88)
travel_distance = 40.0

[node name="platform_3" parent="platforms" instance=ExtResource("6_ow5a4")]
position = Vector2(104, 176)
direction = "left"
travel_distance = 0.0

[node name="platform_4" parent="platforms" instance=ExtResource("6_ow5a4")]
position = Vector2(16, 160)
travel_distance = 60.0

[node name="destructables" type="Node2D" parent="."]
y_sort_enabled = true

[node name="vase_destructable_1" parent="destructables" instance=ExtResource("10_ouso4")]
position = Vector2(120, 40)

[node name="vase_destructable_2" parent="destructables" instance=ExtResource("10_ouso4")]
position = Vector2(104, 40)

[node name="vase_destructable_3" parent="destructables" instance=ExtResource("10_ouso4")]
position = Vector2(88, 40)

[node name="vase_destructable_4" parent="destructables" instance=ExtResource("10_ouso4")]
position = Vector2(72, 40)

[node name="collectables" type="Node2D" parent="."]
y_sort_enabled = true

[node name="health_collectable" parent="collectables" instance=ExtResource("11_ouso4")]
position = Vector2(160, 136)
